--- a/public/proyecto/Proyecto/TpFinal/css/dark.css
+++ b/public/proyecto/Proyecto/TpFinal/css/dark.css
@@ -27,6 +27,19 @@ div.row{
 
 
 }
+.imgGame{
+	width:330px;
+	height: 404px;
+}
+.nameGame{
+	font-size: 40px;
+	font-family: 'elianto', Arial, sans-serif;
+	color:rgb(203, 51, 42);
+}
+.priceGame{
+	font-family: 'elianto', Arial, sans-serif;
+	font-size:30px;
+}
 .menuMovil a{
 	color:white;
 }
@@ -214,7 +227,12 @@ padding: 0px;
   padding: 0px;
 
 }
-
+.contenedorImg{
+	
+	
+	margin-bottom: 10px; 
+	
+}
 .separador{
   width: 100%;
   height:35px;
@@ -389,6 +407,7 @@ background-color: rgb(215, 215, 215);
 }
 .contPortadasIndex{
 	text-align: center;
+	
 
 }
 .precioIndex{
@@ -609,7 +628,7 @@ background-color: rgb(215, 215, 215);
 
 	}
 	div .logo h2 {
-		font-size: 50px;
+		font-size: 40px;
 
 
 	}
