--- a/public/proyecto/Proyecto/TpFinal/css/dark.css
+++ b/public/proyecto/Proyecto/TpFinal/css/dark.css
@@ -27,9 +27,10 @@ div.row{
 
 
 }
+
 .imgGame{
-	width:330px;
-	height: 404px;
+	width:100%;
+	padding: 50px;
 }
 .nameGame{
 	font-size: 40px;
@@ -90,9 +91,7 @@ div .logo {
 	text-align: left;
 }
 input.error{
-	color:#3c3c3c;
-	font-size:18px;
-	line-height: 22px;
+	
 	background-color: #F78181;
 	padding: 13px 45px 13px 45px;
 	margin-bottom: 10px;
@@ -103,6 +102,7 @@ input.error{
 input.error::-webkit-input-placeholder{
 	color:white;
 }
+
 .enviar{
 	padding: 13px 45px 13px 45px;
 	border: #fff solid 4px;
@@ -636,7 +636,11 @@ background-color: rgb(215, 215, 215);
 	#nombreJuego{
 		text-align: center;
 	}
-
+	.imgGame{
+	width:330px;
+	height: 404px;
+	padding: 0px;
+}
 
 
 }
