--- a/public/proyecto/Proyecto/TpFinal/css/dark.css
+++ b/public/proyecto/Proyecto/TpFinal/css/dark.css
@@ -104,6 +104,7 @@ div .logo {
 	border:2px solid red;
 
 }
+
 #textError{
 	color:red;
 	font-style: italic;
@@ -124,6 +125,22 @@ div .logo {
 	font-weight: 670px;
 
 	transition: all 0.3s;
+}
+.enviar2{
+	padding: 10px 42px 10px 42px;
+	border: #fff solid 4px;
+	cursor:pointer;
+	border-radius: 9px;
+	background-color: #555555;
+	color:white;
+	font-size: 20px;
+	font-weight: 670px;
+
+	transition: all 0.3s;
+}
+.enviar2:hover{
+	background-color: #de3333;
+	transition: .7s ease;
 }
 .enviar:hover{
 	background-color: #33de80;
